# game

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
libsdl/: CMakeLists.txt
libsdl/libsdl/: error-checker-wrapper.hh  function-wrapper.hh  sdl.hh  smart-pointer-remover-wrapper.hh  type-wrapper.hh  wrapper.hh  wrappers.hh
libsdl/tests/: error-checker-wrapper.cc  function-wrapper.cc  sdl.cc  smart-pointer-remover-wrapper.cc  type-wrapper.cc  wrappers.cc
